Fixing eshell hook

--- a/emacs.org
+++ b/emacs.org
@@ -785,7 +785,7 @@ theme
 (advice-add 'compilation-filter :around '(lambda (f proc str) (funcall f proc (xterm-color-filter str))))
 
 ;; colors for eshell
-(add-hook 'eshell-before-prompt-hook '(lambda () (setq xterm-color-preserve-properties t)))
+(add-hook 'eshell-before-prompt-hook (lambda () (setq xterm-color-preserve-properties t)))
 (add-to-list 'eshell-preoutput-filter-functions 'xterm-color-filter)
 (setq eshell-output-filter-functions (remove 'eshell-handle-ansi-color eshell-output-filter-functions))
 
