--- a/emacs.org
+++ b/emacs.org
@@ -1808,7 +1808,7 @@ eshell prompt
 (defalias 'github-browse-file 'browse-at-remote)
 
 (setq git-commit-summary-max-length 9999) ;; stop the red text warning in magit COMMIT_MSG buffers after 68 chars
-(add-hook 'git-commit-mode-hook (lambda () (setq-local fill-column 9999))) ;; stop auto-wrapping of COMMIT_MSG extra body message after 68 chars
+(remove-hook 'git-commit-mode-hook 'git-commit-turn-on-auto-fill) ;; stop auto-wrapping of COMMIT_MSG extra body message after 68 chars
 
 (setq browse-at-remote-add-line-number-if-no-region-selected nil)
 
