--- a/emacs.org
+++ b/emacs.org
@@ -203,19 +203,17 @@ These are non-interactive library functions useful in other parts of this config
 
 (defconst jw--emacs-visual-areas '(nil right-fringe left-fringe right-margin left-margin header-line tab-line tab-bar vertical-line vertical-scroll-bar mode-line menu-bar))
 
-(defun jw--is-linux ()
-  "Check if running on linux"
-  (and (eq system-type 'gnu/linux)
-       (not (getenv "WSL_DISTRO_NAME"))))
-
 (defun jw--is-macos ()
   "Check if running on macOS"
   (eq system-type 'darwin))
 
+(defun jw--is-linux ()
+  "Check if running on linux"
+  (and (not (getenv "WSL_DISTRO_NAME")) (eq system-type 'gnu/linux)))
+
 (defun jw--is-wsl-linux ()
   "Check if running on linux in WSL (windows subsystem for linux)"
-  (and (eq system-type 'gnu/linux)
-       (getenv "WSL_DISTRO_NAME")))
+  (and (getenv "WSL_DISTRO_NAME") (eq system-type 'gnu/linux)))
 
 (defun jw--font-name (&optional size)
   (if size (format "Monaco %s" size) "Monaco"))
