--- a/emacs.org
+++ b/emacs.org
@@ -203,19 +203,16 @@ These are non-interactive library functions useful in other parts of this config
 
 (defconst jw--emacs-visual-areas '(nil right-fringe left-fringe right-margin left-margin header-line tab-line tab-bar vertical-line vertical-scroll-bar mode-line menu-bar))
 
-(defun jw--is-linux ()
-  "Check if running on linux"
-  (and (eq system-type 'gnu/linux)
-       (not (getenv "WSL_DISTRO_NAME"))))
+(defun jw--is-linux () (and (eq system-type 'gnu/linux) (not (getenv "WSL_DISTRO_NAME"))))
+(defun jw--is-macos () (eq system-type 'darwin))
+(defun jw--is-wsl-linux () (and (eq system-type 'gnu/linux) (getenv "WSL_DISTRO_NAME")))
 
-(defun jw--is-macos ()
-  "Check if running on macOS"
-  (eq system-type 'darwin))
-
-(defun jw--is-wsl-linux ()
-  "Check if running on linux in WSL (windows subsystem for linux)"
-  (and (eq system-type 'gnu/linux)
-       (getenv "WSL_DISTRO_NAME")))
+;; functions used to conditionally eval ob src blocks in my private configs (:eval and :tangle are ignored by C-c C-c and org-babel-tangle-file when set to "no")
+;; e.g. #BEGIN_SRC emacs-lisp :eval (jw--personal-computer-yn) :tangle (jw--personal-computer-yn)
+;; these have to be loaded here before loading private.org
+(defun jw--computer-personal-yn () (if (string= (getenv "WHICH_COMPUTER") "personal") "yes" "no"))
+(defun jw--computer-gaming-yn () (if (string= (getenv "WHICH_COMPUTER") "gaming") "yes" "no"))
+(defun jw--computer-work-yn () (if (string= (getenv "WHICH_COMPUTER") "work") "yes" "no"))
 
 (defun jw--font-name (&optional size)
   (if size (format "Monaco %s" size) "Monaco"))
