--- a/emacs.org
+++ b/emacs.org
@@ -544,6 +544,26 @@ For long running processes, this will always toggle back and forth between the p
   (if mode-line-format
       (mode-line-off local)
     (mode-line-on local)))
+
+(defun emacs-frame-maximized-on ()
+  (interactive)
+  (unless (eq (frame-parameter nil 'fullscreen) 'maximized)
+    (set-frame-parameter nil 'fullscreen 'maximized)))
+
+(defun emacs-frame-maximized-off ()
+  (interactive)
+  (when (eq (frame-parameter nil 'fullscreen) 'maximized)
+    (set-frame-parameter nil 'fullscreen nil)))
+
+(defun emacs-frame-fullscreen-on ()
+  (interactive)
+  (unless (eq (frame-parameter nil 'fullscreen) 'fullboth)
+    (set-frame-parameter nil 'fullscreen 'fullboth)))
+
+(defun emacs-frame-fullscreen-off ()
+  (interactive)
+  (when (eq (frame-parameter nil 'fullscreen) 'fullboth)
+    (set-frame-parameter nil 'fullscreen nil)))
 #+END_SRC
 
 theme
@@ -2853,7 +2873,7 @@ load the =private= directory and the =private.org= file if they exist
 
 (font-size-transparency-alpha-default)
 
-(unless (eq (frame-parameter nil 'fullscreen) 'maximized) (toggle-frame-maximized))
+(emacs-frame-maximized-on)
 
 (unless (server-running-p) (server-start))
 
